<resources>
    <string name="app_name">P2P Network</string>
    <string name="wallet">Wallet</string>
    <string name="javis">P2P Network Javis AI</string>
    <string name="quotation">Quotation</string>
    <string name="profile">Mine</string>
    <string name="manage">Manage</string>
    <string name="default_font">roboto</string>
    <string name="ppn_system">PPN System</string>
    <string name="profit">Profit</string>
    <string name="total">Total</string>
    <string name="assets">Assets</string>
    <string name="ppn_system_send">PPN System Send</string>
    <string name="ppn_profit_send">PPN Profit Send</string>
    <string name="total_send">Total Send</string>
    <string name="wallet_details">Wallet Details</string>
    <string name="network">P2P Network Javis AI</string>
    <string name="javis_total_investment">Total Investment</string>
    <string name="javis_daily_profit">Daily Profit</string>
    <string name="news">News</string>
    <string name="about_us">About Us</string>
    <string name="community">Community</string>
    <string name="contact_us">Contact Us</string>
    <string name="history_transaction">History Transaction</string>
    <string name="message">Message</string>
    <string name="referlink">Referlink</string>
    <string name="settings">Settings</string>
    <string name="receive_qr_code">Receive QR Code</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="enter_username">Enter username</string>
    <string name="password">Password</string>
    <string name="register_username_with_condition">Username consist of 6 - 12 letters and numbers</string>
    <string name="mobile_phone_hint">Enter your mobile phone</string>
    <string name="email_hint">Enter your email</string>
    <string name="get_validation_code">Get validation code</string>
    <string name="validation_code_hint">Enter the validation code</string>
    <string name="password_hint">Enter your password (at least 6 digits)</string>
    <string name="password_confirm_hint">Re-enter you password</string>
    <string name="invitation_code_hint">Enter your invitation code</string>
    <string name="new_password_confirm_hint">Re-enter your new password</string>
    <string name="new_password_hint">Enter your new password</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="p2p_network">P2P Network</string>
    <string name="my_invitation_code">My invitation code</string>
    <string name="copy_invitation_code">Copy invitation code</string>
    <string name="copy_url">Copy url</string>
    <string name="team_member">Team member</string>
    <string name="team_profit">Team profit</string>
    <string name="team_value">Team value</string>
    <string name="no_messages">You don\'t have any message</string>
    <string name="contact_us_description">Please describe your problem in detail below. We will contact you via email in time.</string>
    <string name="abt_us_description">P2P Network Wallet is wanted to keep you informed that we\'ve updated our privacy policy. While we believe that our new policy should be easy for you to understand, we rest the decision on your reading and comprehensive abilities, and verbal reasoning. If you are not sure of these abilities of yours, please feel free to take a verbal reasoning test and find out your score before going through our new privacy policy. You can use our Kimazool app for this test.</string>
    <string name="user_agreement">User Agreement</string>
    <string name="user_agreement_content">P2P User Agreement Content</string>
    <string name="account_settings">Account Settings</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current password</string>
    <string name="send">Send</string>
    <string name="receiver_address">Receiver Address</string>
    <string name="wallet_type">Wallet Type</string>
    <string name="amount">Amount</string>
    <string name="choose_assets">Choose asset</string>
    <string name="version">Version</string>
    <string name="wallet_details_comming">Wallet details will be released in the future version!!</string>
</resources>
