<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.p2p.activities.ChangePasswordActivity">

    <RelativeLayout
        android:id="@+id/change_password_header"
        android:layout_width="match_parent"
        android:layout_height="56dp">
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/default_padding_margin"
            android:src="@drawable/ic_arrow_back_black_24dp"/>
        <TextView
            android:id="@+id/title"
            android:fontFamily="@string/default_font"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/default_text_medium"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/change_password"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/change_password_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_below="@id/change_password_header"
        android:layout_margin="@dimen/default_padding_margin">

        <EditText
            android:id="@+id/current_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/current_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/current_pass"
            android:layout_marginTop="@dimen/default_padding_margin"
            android:hint="@string/new_password_hint"
            android:inputType="textPassword"
            />
        <EditText
            android:id="@+id/confirm_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_pass"
            android:layout_marginTop="@dimen/default_padding_margin"
            android:hint="@string/new_password_confirm_hint"
            android:inputType="textPassword"
            />
        <Button
            android:layout_below="@id/confirm_new_pass"
            android:id="@+id/change_password_btn"
            android:layout_marginTop="@dimen/bigger_padding_margin"
            android:background="@drawable/button_orange_bordered"
            android:text="@string/change_password"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="35dp" />
    </RelativeLayout>


</RelativeLayout>
