<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.p2p.activities.LoginActivity">

    <RelativeLayout
        android:id="@+id/login_wrapper"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_padding_margin">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:src="@drawable/ic_logo" />

        <RelativeLayout
            android:id="@+id/login_input_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:layout_below="@id/login_logo"
            android:layout_marginTop="@dimen/bigger_padding_margin">

            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_username"
                android:inputType="text" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_username"
                android:layout_marginTop="@dimen/default_padding_margin"
                android:hint="@string/password"
                android:inputType="textPassword"

                />
        </RelativeLayout>

        <Button
            android:id="@+id/login_button_login"
            style="@style/default_white_small_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_input_box"
            android:layout_marginTop="@dimen/bigger_padding_margin"
            android:background="@drawable/button_orange_bordered"
            android:text="@string/login"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/login_button_register"
            style="@style/default_black_small_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_button_login"
            android:layout_marginTop="@dimen/big_padding_margin"
            android:background="@drawable/button_outlined_orange_bordered"
            android:text="@string/register"
            android:textAllCaps="false" />

        <TextView
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/forgot_password"
            style="@style/default_black_tiny_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_button_register"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/bigger_padding_margin"
            android:paddingEnd="0dp"
            android:text="@string/forgot_password" />

    </RelativeLayout>
</ScrollView>
