<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.p2p.activities.SystemSendingActivity">

    <RelativeLayout
        android:id="@+id/user_agreement_header"
        android:layout_width="match_parent"
        android:layout_height="56dp">
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/default_padding_margin"
            android:src="@drawable/ic_arrow_back_black_24dp"/>
        <TextView
            android:id="@+id/title"
            android:fontFamily="@string/default_font"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/default_text_medium"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/message"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/user_agreement_body"
        android:layout_below="@id/user_agreement_header"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/default_padding_margin"
        android:layout_height="match_parent">
        <TextView
            style="@style/default_black_tiny_text"
            android:text="@string/user_agreement_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>


</RelativeLayout>
