<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.p2p.activities.SystemSendingActivity">

    <RelativeLayout
        android:id="@+id/about_us_header"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/default_padding_margin"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@string/default_font"
            android:text="@string/about_us"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/default_text_medium"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/about_us_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/about_us_header"
        android:layout_margin="@dimen/default_padding_margin">

        <ImageView
            android:id="@+id/about_us_logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_logo" />

        <TextView
            android:layout_marginTop="@dimen/bigger_padding_margin"
            android:id="@+id/about_us_description"
            style="@style/default_black_small_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_us_logo"
            android:text="@string/abt_us_description" />

        <RelativeLayout
            android:id="@+id/abt_us_user_agreement"
            android:layout_width="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_us_description"
            android:paddingBottom="@dimen/default_padding_margin"
            android:layout_marginTop="@dimen/bigger_padding_margin">

            <TextView
                android:id="@+id/abt_us_user_agreement_text"
                style="@style/default_black_small_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_agreement" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_chevron_right_black_24dp" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/abt_us_user_agreement"
            android:background="@color/colorBlack" />
    </RelativeLayout>


</RelativeLayout>
